parser.output
Grammar

    0 $accept: Start $end

    1 Start: Classes

    2 Classes: Classes Class
    3        | Class

    4 Class: T_id '{' Members Methods '}'
    5      | T_id T_extends T_id '{' Members Methods '}'

    6 Members: Members Member
    7        | %empty

    8 Member: Type T_id ';'

    9 Methods: Method Methods
   10        | %empty

   11 Method: T_id '(' Parameters ')' T_arrow ReturnType '{' Body '}'

   12 Body: Declarations Statements ReturnState

   13 Parameters: ParamList
   14           | %empty

   15 ParamList: ParamList ',' Param
   16          | Param

   17 Param: Type T_id

   18 ReturnType: T_integer
   19           | T_bool
   20           | T_id
   21           | T_none

   22 Declarations: Declarations Declaration
   23             | %empty

   24 Declaration: Type DL

   25 DL: T_id ',' DL
   26   | T_id ';'

   27 Statements: Statement Statements
   28           | %empty

   29 Statement: Assignment
   30          | MethodCall ';'
   31          | IfElse
   32          | While
   33          | DoWhile
   34          | Print

   35 Assignment: T_id '=' Expression ';'
   36           | T_id '.' T_id '=' Expression ';'

   37 IfElse: T_if Expression '{' BlockState '}'
   38       | T_if Expression '{' BlockState '}' T_else '{' BlockState '}'

   39 While: T_while Expression '{' BlockState '}'

   40 DoWhile: T_do '{' BlockState '}' T_while '(' Expression ')' ';'

   41 Print: T_print Expression ';'

   42 BlockState: BlockState Statement
   43           | Statement

   44 ReturnState: T_return Expression ';'
   45            | %empty

   46 Expression: Expression '+' Expression
   47           | Expression '-' Expression
   48           | Expression '*' Expression
   49           | Expression '/' Expression
   50           | Expression '>' Expression
   51           | Expression T_geq Expression
   52           | Expression T_equals Expression
   53           | Expression T_and Expression
   54           | Expression T_or Expression
   55           | T_not Expression
   56           | '-' Expression
   57           | T_id
   58           | T_id '.' T_id
   59           | MethodCall
   60           | '(' Expression ')'
   61           | T_number
   62           | T_true
   63           | T_false
   64           | T_new T_id
   65           | T_new T_id '(' Arguments ')'

   66 MethodCall: T_id '(' Arguments ')'
   67           | T_id '.' T_id '(' Arguments ')'

   68 Type: T_integer
   69     | T_bool
   70     | T_id

   71 Arguments: ArgumentsC
   72          | %empty

   73 ArgumentsC: ArgumentsC ',' Expression
   74           | Expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 11 40 60 65 66 67
')' (41) 11 40 60 65 66 67
'*' (42) 48
'+' (43) 46
',' (44) 15 25 73
'-' (45) 47 56
'.' (46) 36 58 67
'/' (47) 49
';' (59) 8 26 30 35 36 40 41 44
'=' (61) 35 36
'>' (62) 50
'{' (123) 4 5 11 37 38 39 40
'}' (125) 4 5 11 37 38 39 40
error (256)
T_unary (258)
T_equals (259) 52
T_geq (260) 51
T_arrow (261) 11
T_and (262) 53
T_or (263) 54
T_not (264) 55
T_true (265) 62
T_false (266) 63
T_new (267) 64 65
T_if (268) 37 38
T_else (269) 38
T_while (270) 39 40
T_do (271) 40
T_print (272) 41
T_extends (273) 5
T_return (274) 44
T_none (275) 21
T_bool (276) 19 69
T_integer (277) 18 68
T_id (278) 4 5 8 11 17 20 25 26 35 36 57 58 64 65 66 67 70
T_number (279) 61


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
Start (39)
    on left: 1, on right: 0
Classes (40)
    on left: 2 3, on right: 1 2
Class (41)
    on left: 4 5, on right: 2 3
Members (42)
    on left: 6 7, on right: 4 5 6
Member (43)
    on left: 8, on right: 6
Methods (44)
    on left: 9 10, on right: 4 5 9
Method (45)
    on left: 11, on right: 9
Body (46)
    on left: 12, on right: 11
Parameters (47)
    on left: 13 14, on right: 11
ParamList (48)
    on left: 15 16, on right: 13 15
Param (49)
    on left: 17, on right: 15 16
ReturnType (50)
    on left: 18 19 20 21, on right: 11
Declarations (51)
    on left: 22 23, on right: 12 22
Declaration (52)
    on left: 24, on right: 22
DL (53)
    on left: 25 26, on right: 24 25
Statements (54)
    on left: 27 28, on right: 12 27
Statement (55)
    on left: 29 30 31 32 33 34, on right: 27 42 43
Assignment (56)
    on left: 35 36, on right: 29
IfElse (57)
    on left: 37 38, on right: 31
While (58)
    on left: 39, on right: 32
DoWhile (59)
    on left: 40, on right: 33
Print (60)
    on left: 41, on right: 34
BlockState (61)
    on left: 42 43, on right: 37 38 39 40 42
ReturnState (62)
    on left: 44 45, on right: 12
Expression (63)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65, on right: 35 36 37 38 39 40 41 44 46 47 48 49 50 51 52 53
    54 55 56 60 73 74
MethodCall (64)
    on left: 66 67, on right: 30 59
Type (65)
    on left: 68 69 70, on right: 8 17 24
Arguments (66)
    on left: 71 72, on right: 65 66 67
ArgumentsC (67)
    on left: 73 74, on right: 71 73


State 0

    0 $accept: . Start $end

    T_id  shift, and go to state 1

    Start    go to state 2
    Classes  go to state 3
    Class    go to state 4


State 1

    4 Class: T_id . '{' Members Methods '}'
    5      | T_id . T_extends T_id '{' Members Methods '}'

    T_extends  shift, and go to state 5
    '{'        shift, and go to state 6


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 7


State 3

    1 Start: Classes .
    2 Classes: Classes . Class

    T_id  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class  go to state 8


State 4

    3 Classes: Class .

    $default  reduce using rule 3 (Classes)


State 5

    5 Class: T_id T_extends . T_id '{' Members Methods '}'

    T_id  shift, and go to state 9


State 6

    4 Class: T_id '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 10


State 7

    0 $accept: Start $end .

    $default  accept


State 8

    2 Classes: Classes Class .

    $default  reduce using rule 2 (Classes)


State 9

    5 Class: T_id T_extends T_id . '{' Members Methods '}'

    '{'  shift, and go to state 11


State 10

    4 Class: T_id '{' Members . Methods '}'
    6 Members: Members . Member

    T_bool     shift, and go to state 12
    T_integer  shift, and go to state 13
    T_id       shift, and go to state 14

    $default  reduce using rule 10 (Methods)

    Member   go to state 15
    Methods  go to state 16
    Method   go to state 17
    Type     go to state 18


State 11

    5 Class: T_id T_extends T_id '{' . Members Methods '}'

    $default  reduce using rule 7 (Members)

    Members  go to state 19


State 12

   69 Type: T_bool .

    $default  reduce using rule 69 (Type)


State 13

   68 Type: T_integer .

    $default  reduce using rule 68 (Type)


State 14

   11 Method: T_id . '(' Parameters ')' T_arrow ReturnType '{' Body '}'
   70 Type: T_id .

    '('  shift, and go to state 20

    $default  reduce using rule 70 (Type)


State 15

    6 Members: Members Member .

    $default  reduce using rule 6 (Members)


State 16

    4 Class: T_id '{' Members Methods . '}'

    '}'  shift, and go to state 21


State 17

    9 Methods: Method . Methods

    T_id  shift, and go to state 22

    $default  reduce using rule 10 (Methods)

    Methods  go to state 23
    Method   go to state 17


State 18

    8 Member: Type . T_id ';'

    T_id  shift, and go to state 24


State 19

    5 Class: T_id T_extends T_id '{' Members . Methods '}'
    6 Members: Members . Member

    T_bool     shift, and go to state 12
    T_integer  shift, and go to state 13
    T_id       shift, and go to state 14

    $default  reduce using rule 10 (Methods)

    Member   go to state 15
    Methods  go to state 25
    Method   go to state 17
    Type     go to state 18


State 20

   11 Method: T_id '(' . Parameters ')' T_arrow ReturnType '{' Body '}'

    T_bool     shift, and go to state 12
    T_integer  shift, and go to state 13
    T_id       shift, and go to state 26

    $default  reduce using rule 14 (Parameters)

    Parameters  go to state 27
    ParamList   go to state 28
    Param       go to state 29
    Type        go to state 30


State 21

    4 Class: T_id '{' Members Methods '}' .

    $default  reduce using rule 4 (Class)


State 22

   11 Method: T_id . '(' Parameters ')' T_arrow ReturnType '{' Body '}'

    '('  shift, and go to state 20


State 23

    9 Methods: Method Methods .

    $default  reduce using rule 9 (Methods)


State 24

    8 Member: Type T_id . ';'

    ';'  shift, and go to state 31


State 25

    5 Class: T_id T_extends T_id '{' Members Methods . '}'

    '}'  shift, and go to state 32


State 26

   70 Type: T_id .

    $default  reduce using rule 70 (Type)


State 27

   11 Method: T_id '(' Parameters . ')' T_arrow ReturnType '{' Body '}'

    ')'  shift, and go to state 33


State 28

   13 Parameters: ParamList .
   15 ParamList: ParamList . ',' Param

    ','  shift, and go to state 34

    $default  reduce using rule 13 (Parameters)


State 29

   16 ParamList: Param .

    $default  reduce using rule 16 (ParamList)


State 30

   17 Param: Type . T_id

    T_id  shift, and go to state 35


State 31

    8 Member: Type T_id ';' .

    $default  reduce using rule 8 (Member)


State 32

    5 Class: T_id T_extends T_id '{' Members Methods '}' .

    $default  reduce using rule 5 (Class)


State 33

   11 Method: T_id '(' Parameters ')' . T_arrow ReturnType '{' Body '}'

    T_arrow  shift, and go to state 36


State 34

   15 ParamList: ParamList ',' . Param

    T_bool     shift, and go to state 12
    T_integer  shift, and go to state 13
    T_id       shift, and go to state 26

    Param  go to state 37
    Type   go to state 30


State 35

   17 Param: Type T_id .

    $default  reduce using rule 17 (Param)


State 36

   11 Method: T_id '(' Parameters ')' T_arrow . ReturnType '{' Body '}'

    T_none     shift, and go to state 38
    T_bool     shift, and go to state 39
    T_integer  shift, and go to state 40
    T_id       shift, and go to state 41

    ReturnType  go to state 42


State 37

   15 ParamList: ParamList ',' Param .

    $default  reduce using rule 15 (ParamList)


State 38

   21 ReturnType: T_none .

    $default  reduce using rule 21 (ReturnType)


State 39

   19 ReturnType: T_bool .

    $default  reduce using rule 19 (ReturnType)


State 40

   18 ReturnType: T_integer .

    $default  reduce using rule 18 (ReturnType)


State 41

   20 ReturnType: T_id .

    $default  reduce using rule 20 (ReturnType)


State 42

   11 Method: T_id '(' Parameters ')' T_arrow ReturnType . '{' Body '}'

    '{'  shift, and go to state 43


State 43

   11 Method: T_id '(' Parameters ')' T_arrow ReturnType '{' . Body '}'

    $default  reduce using rule 23 (Declarations)

    Body          go to state 44
    Declarations  go to state 45


State 44

   11 Method: T_id '(' Parameters ')' T_arrow ReturnType '{' Body . '}'

    '}'  shift, and go to state 46


State 45

   12 Body: Declarations . Statements ReturnState
   22 Declarations: Declarations . Declaration

    T_if       shift, and go to state 47
    T_while    shift, and go to state 48
    T_do       shift, and go to state 49
    T_print    shift, and go to state 50
    T_bool     shift, and go to state 12
    T_integer  shift, and go to state 13
    T_id       shift, and go to state 51

    $default  reduce using rule 28 (Statements)

    Declaration  go to state 52
    Statements   go to state 53
    Statement    go to state 54
    Assignment   go to state 55
    IfElse       go to state 56
    While        go to state 57
    DoWhile      go to state 58
    Print        go to state 59
    MethodCall   go to state 60
    Type         go to state 61


State 46

   11 Method: T_id '(' Parameters ')' T_arrow ReturnType '{' Body '}' .

    $default  reduce using rule 11 (Method)


State 47

   37 IfElse: T_if . Expression '{' BlockState '}'
   38       | T_if . Expression '{' BlockState '}' T_else '{' BlockState '}'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 70
    MethodCall  go to state 71


State 48

   39 While: T_while . Expression '{' BlockState '}'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 72
    MethodCall  go to state 71


State 49

   40 DoWhile: T_do . '{' BlockState '}' T_while '(' Expression ')' ';'

    '{'  shift, and go to state 73


State 50

   41 Print: T_print . Expression ';'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 74
    MethodCall  go to state 71


State 51

   35 Assignment: T_id . '=' Expression ';'
   36           | T_id . '.' T_id '=' Expression ';'
   66 MethodCall: T_id . '(' Arguments ')'
   67           | T_id . '.' T_id '(' Arguments ')'
   70 Type: T_id .

    '('  shift, and go to state 75
    '='  shift, and go to state 76
    '.'  shift, and go to state 77

    $default  reduce using rule 70 (Type)


State 52

   22 Declarations: Declarations Declaration .

    $default  reduce using rule 22 (Declarations)


State 53

   12 Body: Declarations Statements . ReturnState

    T_return  shift, and go to state 78

    $default  reduce using rule 45 (ReturnState)

    ReturnState  go to state 79


State 54

   27 Statements: Statement . Statements

    T_if     shift, and go to state 47
    T_while  shift, and go to state 48
    T_do     shift, and go to state 49
    T_print  shift, and go to state 50
    T_id     shift, and go to state 80

    $default  reduce using rule 28 (Statements)

    Statements  go to state 81
    Statement   go to state 54
    Assignment  go to state 55
    IfElse      go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Print       go to state 59
    MethodCall  go to state 60


State 55

   29 Statement: Assignment .

    $default  reduce using rule 29 (Statement)


State 56

   31 Statement: IfElse .

    $default  reduce using rule 31 (Statement)


State 57

   32 Statement: While .

    $default  reduce using rule 32 (Statement)


State 58

   33 Statement: DoWhile .

    $default  reduce using rule 33 (Statement)


State 59

   34 Statement: Print .

    $default  reduce using rule 34 (Statement)


State 60

   30 Statement: MethodCall . ';'

    ';'  shift, and go to state 82


State 61

   24 Declaration: Type . DL

    T_id  shift, and go to state 83

    DL  go to state 84


State 62

   55 Expression: T_not . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 85
    MethodCall  go to state 71


State 63

   62 Expression: T_true .

    $default  reduce using rule 62 (Expression)


State 64

   63 Expression: T_false .

    $default  reduce using rule 63 (Expression)


State 65

   64 Expression: T_new . T_id
   65           | T_new . T_id '(' Arguments ')'

    T_id  shift, and go to state 86


State 66

   57 Expression: T_id .
   58           | T_id . '.' T_id
   66 MethodCall: T_id . '(' Arguments ')'
   67           | T_id . '.' T_id '(' Arguments ')'

    '('  shift, and go to state 75
    '.'  shift, and go to state 87

    $default  reduce using rule 57 (Expression)


State 67

   61 Expression: T_number .

    $default  reduce using rule 61 (Expression)


State 68

   56 Expression: '-' . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 88
    MethodCall  go to state 71


State 69

   60 Expression: '(' . Expression ')'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 89
    MethodCall  go to state 71


State 70

   37 IfElse: T_if Expression . '{' BlockState '}'
   38       | T_if Expression . '{' BlockState '}' T_else '{' BlockState '}'
   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98
    '{'       shift, and go to state 99


State 71

   59 Expression: MethodCall .

    $default  reduce using rule 59 (Expression)


State 72

   39 While: T_while Expression . '{' BlockState '}'
   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98
    '{'       shift, and go to state 100


State 73

   40 DoWhile: T_do '{' . BlockState '}' T_while '(' Expression ')' ';'

    T_if     shift, and go to state 47
    T_while  shift, and go to state 48
    T_do     shift, and go to state 49
    T_print  shift, and go to state 50
    T_id     shift, and go to state 80

    Statement   go to state 101
    Assignment  go to state 55
    IfElse      go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Print       go to state 59
    BlockState  go to state 102
    MethodCall  go to state 60


State 74

   41 Print: T_print Expression . ';'
   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98
    ';'       shift, and go to state 103


State 75

   66 MethodCall: T_id '(' . Arguments ')'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    $default  reduce using rule 72 (Arguments)

    Expression  go to state 104
    MethodCall  go to state 71
    Arguments   go to state 105
    ArgumentsC  go to state 106


State 76

   35 Assignment: T_id '=' . Expression ';'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 107
    MethodCall  go to state 71


State 77

   36 Assignment: T_id '.' . T_id '=' Expression ';'
   67 MethodCall: T_id '.' . T_id '(' Arguments ')'

    T_id  shift, and go to state 108


State 78

   44 ReturnState: T_return . Expression ';'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 109
    MethodCall  go to state 71


State 79

   12 Body: Declarations Statements ReturnState .

    $default  reduce using rule 12 (Body)


State 80

   35 Assignment: T_id . '=' Expression ';'
   36           | T_id . '.' T_id '=' Expression ';'
   66 MethodCall: T_id . '(' Arguments ')'
   67           | T_id . '.' T_id '(' Arguments ')'

    '('  shift, and go to state 75
    '='  shift, and go to state 76
    '.'  shift, and go to state 77


State 81

   27 Statements: Statement Statements .

    $default  reduce using rule 27 (Statements)


State 82

   30 Statement: MethodCall ';' .

    $default  reduce using rule 30 (Statement)


State 83

   25 DL: T_id . ',' DL
   26   | T_id . ';'

    ';'  shift, and go to state 110
    ','  shift, and go to state 111


State 84

   24 Declaration: Type DL .

    $default  reduce using rule 24 (Declaration)


State 85

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression
   55           | T_not Expression .

    $default  reduce using rule 55 (Expression)


State 86

   64 Expression: T_new T_id .
   65           | T_new T_id . '(' Arguments ')'

    '('  shift, and go to state 112

    $default  reduce using rule 64 (Expression)


State 87

   58 Expression: T_id '.' . T_id
   67 MethodCall: T_id '.' . T_id '(' Arguments ')'

    T_id  shift, and go to state 113


State 88

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression
   56           | '-' Expression .

    $default  reduce using rule 56 (Expression)


State 89

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression
   60           | '(' Expression . ')'

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98
    ')'       shift, and go to state 114


State 90

   52 Expression: Expression T_equals . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 115
    MethodCall  go to state 71


State 91

   51 Expression: Expression T_geq . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 116
    MethodCall  go to state 71


State 92

   53 Expression: Expression T_and . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 117
    MethodCall  go to state 71


State 93

   54 Expression: Expression T_or . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 118
    MethodCall  go to state 71


State 94

   50 Expression: Expression '>' . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 119
    MethodCall  go to state 71


State 95

   46 Expression: Expression '+' . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 120
    MethodCall  go to state 71


State 96

   47 Expression: Expression '-' . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 121
    MethodCall  go to state 71


State 97

   48 Expression: Expression '*' . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 122
    MethodCall  go to state 71


State 98

   49 Expression: Expression '/' . Expression

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    Expression  go to state 123
    MethodCall  go to state 71


State 99

   37 IfElse: T_if Expression '{' . BlockState '}'
   38       | T_if Expression '{' . BlockState '}' T_else '{' BlockState '}'

    T_if     shift, and go to state 47
    T_while  shift, and go to state 48
    T_do     shift, and go to state 49
    T_print  shift, and go to state 50
    T_id     shift, and go to state 80

    Statement   go to state 101
    Assignment  go to state 55
    IfElse      go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Print       go to state 59
    BlockState  go to state 124
    MethodCall  go to state 60


State 100

   39 While: T_while Expression '{' . BlockState '}'

    T_if     shift, and go to state 47
    T_while  shift, and go to state 48
    T_do     shift, and go to state 49
    T_print  shift, and go to state 50
    T_id     shift, and go to state 80

    Statement   go to state 101
    Assignment  go to state 55
    IfElse      go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Print       go to state 59
    BlockState  go to state 125
    MethodCall  go to state 60


State 101

   43 BlockState: Statement .

    $default  reduce using rule 43 (BlockState)


State 102

   40 DoWhile: T_do '{' BlockState . '}' T_while '(' Expression ')' ';'
   42 BlockState: BlockState . Statement

    T_if     shift, and go to state 47
    T_while  shift, and go to state 48
    T_do     shift, and go to state 49
    T_print  shift, and go to state 50
    T_id     shift, and go to state 80
    '}'      shift, and go to state 126

    Statement   go to state 127
    Assignment  go to state 55
    IfElse      go to state 56
    While       go to state 57
    DoWhile     go to state 58
    Print       go to state 59
    MethodCall  go to state 60


State 103

   41 Print: T_print Expression ';' .

    $default  reduce using rule 41 (Print)


State 104

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression
   74 ArgumentsC: Expression .

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98

    $default  reduce using rule 74 (ArgumentsC)


State 105

   66 MethodCall: T_id '(' Arguments . ')'

    ')'  shift, and go to state 128


State 106

   71 Arguments: ArgumentsC .
   73 ArgumentsC: ArgumentsC . ',' Expression

    ','  shift, and go to state 129

    $default  reduce using rule 71 (Arguments)


State 107

   35 Assignment: T_id '=' Expression . ';'
   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98
    ';'       shift, and go to state 130


State 108

   36 Assignment: T_id '.' T_id . '=' Expression ';'
   67 MethodCall: T_id '.' T_id . '(' Arguments ')'

    '('  shift, and go to state 131
    '='  shift, and go to state 132


State 109

   44 ReturnState: T_return Expression . ';'
   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    T_equals  shift, and go to state 90
    T_geq     shift, and go to state 91
    T_and     shift, and go to state 92
    T_or      shift, and go to state 93
    '>'       shift, and go to state 94
    '+'       shift, and go to state 95
    '-'       shift, and go to state 96
    '*'       shift, and go to state 97
    '/'       shift, and go to state 98
    ';'       shift, and go to state 133


State 110

   26 DL: T_id ';' .

    $default  reduce using rule 26 (DL)


State 111

   25 DL: T_id ',' . DL

    T_id  shift, and go to state 83

    DL  go to state 134


State 112

   65 Expression: T_new T_id '(' . Arguments ')'

    T_not     shift, and go to state 62
    T_true    shift, and go to state 63
    T_false   shift, and go to state 64
    T_new     shift, and go to state 65
    T_id      shift, and go to state 66
    T_number  shift, and go to state 67
    '-'       shift, and go to state 68
    '('       shift, and go to state 69

    $default  reduce using rule 72 (Arguments)

    Expression  go to state 104
    MethodCall  go to state 71
    Arguments   go to state 135
    ArgumentsC  go to state 106


State 113

   58 Expression: T_id '.' T_id .
   67 MethodCall: T_id '.' T_id . '(' Arguments ')'

    '('  shift, and go to state 131

    $default  reduce using rule 58 (Expression)


State 114

   60 Expression: '(' Expression ')' .

    $default  reduce using rule 60 (Expression)


State 115

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   52           | Expression T_equals Expression .
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    '+'  shift, and go to state 95
    '-'  shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98

    $default  reduce using rule 52 (Expression)


State 116

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   51           | Expression T_geq Expression .
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   54           | Expression . T_or Expression

    '+'  shift, and go to state 95
    '-'  shift, and go to state 96
    '*'  shift, and go to state 97
    '/'  shift, and go to state 98

    $default  reduce using rule 51 (Expression)


State 117

   46 Expression: Expression . '+' Expression
   47           | Expression . '-' Expression
   48           | Expression . '*' Expression
   49           | Expression . '/' Expression
   50           | Expression . '>' Expression
   51           | Expression . T_geq Expression
   52           | Expression . T_equals Expression
   53           | Expression . T_and Expression
   53           | Expression T_and Expression .
   54           | Expression . T_or Expression
